--- a/css/style.css
+++ b/css/style.css
@@ -1116,13 +1116,16 @@ main .pv {
     width: 10rem;
     height: 3rem;
     border-radius: 0.625rem;
-    font-size: 1.5rem;
-    color: var(--beige);
     background-color: var(--dark-blue);
     margin: 2rem;    
     margin-top: 3.5rem;
 }
 
+.ups button a {
+    font-size: 1.5rem;
+    color: var(--beige);
+    font-weight: 500;
+}
 
 
 /*************************************************************************************************************************************/
