--- a/css/style.css
+++ b/css/style.css
@@ -906,7 +906,6 @@ main .pv {
     background-color: #CEDFE3;
     margin-bottom: 2rem;
     padding: 2rem;
-    padding-left: 3rem;
     cursor: pointer;
     display: flex;
     justify-content: space-between;
@@ -932,7 +931,7 @@ main .pv {
     justify-self: center;
   }
 
-  /* Styler "arrow", der indikerer, at det er klikbart */
+  /* Styler pilen, der indikerer, at det er klikbart */
   .arrow {
     font-size: 1.8rem;
     color: #024158;
@@ -945,7 +944,7 @@ main .pv {
     border: 3px solid #024158;
     border-radius: 0.6rem;
     width: 72rem;
-    height: 78rem;
+    height: auto;
 
   }
 
@@ -962,6 +961,11 @@ main .pv {
     font-size: 1.8rem;
     font-weight: lighter;
     color: #024158;
+    line-height: 3rem;
+  }
+
+  .faq-answer p{
+    padding-top: 2rem;
   }
 
   /* Styler links i svar til spørgsmål */
@@ -980,8 +984,20 @@ main .pv {
     width: 72rem;
     text-align: center;
     margin: 5rem;
-
   }
+
+  /* Styler ny class til udvidet boks, når svaret kommer frem */
+  .faq-udvidetboks {
+    height: auto;
+    display: block;
+  }
+
+  /* Styler ny class så spørgsmålet bliver fed, når svaret kommer frem */
+  .questions-fed {
+    font-weight: 700;
+    padding-top: 1.6rem;
+  }
+
   
 /*************************************************************************************************************************************/
 /************************************************************* DIN KURV **************************************************************/
