--- a/css/style.css
+++ b/css/style.css
@@ -624,6 +624,25 @@ main .pv {
     font-weight: 400;
 }
 
+#knapinfo1, #knapinfo2 {
+    display: block;
+}
+
+#drop1, #drop2 {
+    display: none;
+    position: absolute;
+}
+
+#drop1 p, #drop2 p {
+    padding: 5px;
+    background: var(--beige);
+}
+
+#drop1 p:hover, #drop2:hover {
+    background: var(--red);
+    color: var(--beige);
+}
+
 /* byg selv informations liste */
 #byg-selv-list {
     border: 3px solid var(--dark-blue);
@@ -1096,7 +1115,7 @@ main .pv {
     justify-content: center;
 }
 
-.activebtn:hover {
+#activebtn1:hover, #activebtn2:hover, #activebtn3:hover {
     border-radius: 10px;
     background: var(--red);
     color: var(--beige);
