--- a/css/style.css
+++ b/css/style.css
@@ -534,6 +534,11 @@ main .pv {
     font-size: 25px;
   }
 
+    /* Gør skriften når man skriver i et input-felt større */
+input[type="text"] {
+    font-size:25px;
+}
+
 .tilmeldinput {
     display: flex;
     flex-direction: column;
