--- a/css/style.css
+++ b/css/style.css
@@ -1111,7 +1111,7 @@ input[type="text"] {
     margin: 50px 0 20px;
 }
 
-
+/* information i toppen af kurven */
 .kurvknapper {
     display: flex;
     margin-bottom: 2rem;
@@ -1146,6 +1146,7 @@ input[type="text"] {
     color: var(--beige);
 }
 
+/* pris */
 .tekst-kurv {
     margin: 50px;
 }
@@ -1161,6 +1162,7 @@ input[type="text"] {
     font-size: 30px;
 }
 
+/* ændre/annuller ordre ikoner */
 .ikonerbund {
     display: flex;
     margin-bottom: 70px;
@@ -1177,6 +1179,8 @@ input[type="text"] {
     width: 72px;
 }
 
+
+/* fortsæt knapper */
 .fortsaetknapper {
     display: flex;
     gap: 50px;
