--- a/css/style.css
+++ b/css/style.css
@@ -570,11 +570,11 @@ input[type="text"] {
 
 /* overskrifter */
 .maltidskasseh1 {
-    margin-bottom: 0;
+    margin-bottom: -1rem;
 }
 
 .maltidskasseh2 {
-    font-size: 6rem;
+    font-size: 4rem;
     margin-bottom: 7.5rem;
 }
 
@@ -672,7 +672,7 @@ input[type="text"] {
     background-color: var(--light-blue);
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 70%;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
