--- a/css/style.css
+++ b/css/style.css
@@ -1116,7 +1116,7 @@ input[type="text"] {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    width: 70%;
+    width: 60%;
     align-items: center;
     margin-bottom: 100px;
     padding: 0 50px;
@@ -1124,9 +1124,9 @@ input[type="text"] {
 
 .kurv-boks h3 {
     color: #024158;
-    font-size: 40px;
+    font-size: 35px;
     font-weight: 700;
-    margin: 50px 0 20px;
+    margin: 90px 0 60px;
 }
 
 /* information i toppen af kurven */
@@ -1144,8 +1144,6 @@ input[type="text"] {
 }
 
 .kurvknapper button {
-    width: 231px;
-    height: 63px;
     background-color: var(--beige);
     border-radius: 10px;
     border: 3px solid var(--red);
@@ -1156,6 +1154,7 @@ input[type="text"] {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    padding: 1rem 3rem;
 }
 
 #activebtn1:hover, #activebtn2:hover, #activebtn3:hover {
@@ -1172,12 +1171,12 @@ input[type="text"] {
 .tekst-kurv p {
     padding: 5px;
     color: var(--dark-blue);
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 400;
 }
 
 .tekst-kurv p:first-child {
-    font-size: 30px;
+    font-size: 25px;
 }
 
 /* ændre/annuller ordre ikoner */
@@ -1209,11 +1208,11 @@ input[type="text"] {
     border-radius: 10px;
     border: 2px solid var(--dark-blue);
     background-color: var(--beige);
-    width: 269px;
-    height: 88px;
+    width: 15rem;
+    height: 5rem;
     color: var(--dark-blue);
     text-align: center;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 300;
     padding: 15px;
 }
@@ -1222,11 +1221,11 @@ input[type="text"] {
     border-radius: 10px;
     border: none;
     background: var(--dark-blue);
-    width: 269px;
-    height: 88px;
+    width: 15rem;
+    height: 5rem;
     color: var(--beige);
     text-align: center;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 600;
     padding: 10px;
 }
@@ -1252,18 +1251,20 @@ input[type="text"] {
 #tilmeld {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 80%;
+    text-align: left;
+    width: 60%;
 }
 
 #tilmeld h4 {
     margin: 3.12rem 0 2rem 2.88rem;
+    text-align: left;
 }
 
 .kanttil {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-self: center;
     align-items: flex-start;
     width: 100%;
     border-radius: 10px;
@@ -1286,13 +1287,23 @@ h4, h5 {
     line-height: normal;
 }
 
+#opret-bla {
+    background-color: var(--dark-blue); 
+    border: 2px solid var(--dark-blue);
+}
+
+#opret-bla:hover {
+    color: var(--dark-blue);
+    background-color: var(--beige);
+    border: 2px solid var(--dark-blue);
+}
+
 .kanttil h5, .kanttilrod h5 {
     margin-bottom: 2rem;
 }
 
 .kanttil input {    
     color: var(--dark-blue);
-    width: 50rem;
     border-radius: 6.25rem;
     border: 2px solid var(--dark-blue);
     background: var(--beige);
@@ -1302,35 +1313,26 @@ h4, h5 {
 /* TILMELD DIG Er du allerede tilmeldt? slut */
 
 /* TILMELD DIG Er du ny hos os? start */
-.kanttilrod {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    width: 100%;
-    border-radius: 10px;
+#kanttilrod {
     border: 3px solid var(--red);    padding: 3rem;  
-    margin: 0 0 4.50rem 0;
 }
 
-.kanttilrod input {    
+#kanttilrod input {    
     color: var(--red);
-    border-radius: 6.25rem;
     border: 2px solid var(--red);
     background: var(--beige);
-    padding: 1rem;
-    margin: 1rem 0;
 }
 
     /* Opret dig button */
 .opret {
-    width: 17rem;
-    height: 4.5rem;
     border-radius: 0.625rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
+    padding: 1rem 4rem;
     color: var(--beige);
     background-color: var(--red); 
-    border: none;
+    border: 2px solid var(--red);
+    align-self: center;
+    margin-top: 1rem;
 }
 
 .opret:hover {
