--- a/css/style.css
+++ b/css/style.css
@@ -1104,6 +1104,7 @@ input[type="text"] {
     align-items: center;
     margin-bottom: 100px;
     padding: 0 50px;
+    min-width: 1024px;
 }
 
 .kurv-boks h3 {
